--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Tutorials
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
   Tutorials for the community
-#baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/Tutorial" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
@@ -31,7 +31,7 @@ plugins:
   - jekyll-sitemap
 
 # A list of the pages to display in the navigation bar
-header_pages:
+#header_pages:
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
